# rust-portfolio

./: .gitignore  Cargo.toml
content/courses/pagerank/: index.md
content/courses/td_aaia/: index.md
content/courses/td_aaia/chapter_1/: index.md
content/courses/td_aaia/chapter_2/: index.md
content/courses/td_aaia/chapter_3/: index.md
content/courses/td_aaia/chapter_4/: index.md
content/courses/td_aaia/chapter_5/: index.md
content/courses/td_aaia/chapter_6/: index.md
content/posts/condingame_solutions/: index.md
content/posts/graph-theory/: index.md
content/publications/abstract_xor/: index.md
src/: main.rs
src/models/: courses.rs  date.rs  mod.rs  posts.rs  publications.rs  resources.rs
src/routes/: courses.rs  mod.rs  posts.rs  publications.rs
static/assets/img/courses/td_aaia/exo2/: index.md
static/assets/img/courses/td_aaia/exo3/: index.md
static/script/: prism.js
static/script/libs/: mathjax.js  viz.js
static/script/libs/mathjax/: package.json
static/script/libs/viz/: full.render.js
static/style/: common.css  index.css  prism.css
static/style/_courses/: get.css  get_chapter.css  index.css
static/style/_posts/: get.css  index.css
static/style/_publications/: get.css  index.css
templates/: default.tera  index.tera
templates/courses/: get.tera  get_chapter.tera  index.tera
templates/posts/: get.tera  index.tera
templates/publications/: get.tera  index.tera
