[package]
name = "portfolio"
version = "0.1.0"
authors = ["rloic <loic.rouquette@insa-lyon.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
pulldown-cmark = "0.7.0"
yaml-rust = "0.4.3"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
notify = "4.0.15"

[dependencies.rocket_contrib]
version = "0.4.4"
features=["json", "tera_templates"]